--- a/app/views/keywords/_form.html.erb
+++ b/app/views/keywords/_form.html.erb
@@ -4,10 +4,11 @@
       <h2><%= pluralize(keyword.errors.count, "error") %> prohibited this keyword from being saved:</h2>
 
       <ul>
-        <% keyword.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+        <% keyword.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
         <% end %>
       </ul>
+      
     </div>
   <% end %>
 
@@ -23,8 +24,9 @@
 
   <div>
     <%= form.label :search_engine, style: "display: block" %>
-    <%= form.text_field :search_engine %>
+    <%= form.select :search_engine, options_for_select([["Google", "google"], ["Bing", "bing"], ["Yahoo", "yahoo"]]), prompt: "Select Search Engine" %>
   </div>
+  
 
   <div>
     <%= form.submit %>
