--- a/app/views/keywords/index.html.erb
+++ b/app/views/keywords/index.html.erb
@@ -1,15 +1,10 @@
-<p style="color: green"><%= notice %></p>
-
 <% content_for :title, "Keywords" %>
 
 <h1>Keywords</h1>
 
 <div id="keywords">
-  <% @keywords.each do |keyword| %>
-    <%= render keyword %>
-    <p>
-      <%= link_to "Show this keyword", keyword %>
-    </p>
+  <% @keywords.each do |keyword| %> <%= render keyword %>
+  <p><%= link_to "Show this keyword", keyword %></p>
   <% end %>
 </div>
 
