--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= content_for(:title) || "Seo Dashboard" %></title>
+    <title><%= content_for(:title) || "My SEO Dashboard" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <%= csrf_meta_tags %> <%= csp_meta_tag %> <%= yield :head %>
@@ -19,6 +19,8 @@
     <p class="alert alert-success"><%= notice %></p>
     <% end %> <% if alert %>
     <p class="alert alert-danger"><%= alert %></p>
-    <% end %> <%= yield %>
+    <% end %> 
+    <%= render 'partials/sidebar' %>
+    <%= render 'partials/main_content' %>
   </body>
 </html>
