--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,4 +1,4 @@
 <h1>User Profile</h1>
 <p>Welcome, <%= current_user.name %>!</p>
 
-<%= link_to 'Account Settings', settings_path, class: 'btn btn-primary' %>
+<%= link_to 'Account Settings', settings_path, class: 'btn button' %>
