Update stylesheets, views, and routes configuration; add SerpapiService for keyword ranking
- Modified global.scss for updated styling.
- Updated _main_content.html.erb and _sidebar.html.erb for layout changes.
- Adjusted routes.rb for new routing configurations.
- Added SerpapiService to handle keyword ranking searches using SERP API.

--- a/app/views/partials/_main_content.html.erb
+++ b/app/views/partials/_main_content.html.erb
@@ -1,20 +1,21 @@
 <main class="main-content">
-    <div class="nav">
-        <h1>Nav</h1>
-    </div>
-    <%= yield %>
-    <!-- Footer Start -->
-    <div class="footer">
-        <div class="footer-text-container">
-            <div class="row">
-                <div class="col-12 col-sm-6 text-center text-sm-start">
-                    &copy; <a href="#">My SEO Dashboard</a>, All Right Reserved. 
-                </div>
-                <div class="col-12 col-sm-6 text-center text-sm-end">
-                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    Designed By <a href="">Mama Tech</a>
-                </div>
-            </div>
+  <!-- Nav -->
+  <div class="nav">
+    <h1>My SEO Dashboard</h1>
+  </div>
+  <%= yield %>
+  <!-- Footer -->
+  <div class="footer">
+    <div class="footer-text-container">
+      <div class="row">
+        <div class="col-12 col-sm-6 text-sm-start text-center">
+          &copy; <a href="#">My SEO Dashboard</a>, All Right Reserved.
         </div>
+        <div class="col-12 col-sm-6 text-sm-end text-center">
+          <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+          Designed By <a href="">Mama Tech</a>
+        </div>
+      </div>
     </div>
+  </div>
 </main>
