--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -11,6 +11,9 @@ body {
 }
 
 .sidebar {
+  
+  padding-top: 1rem;
+  padding: 20px;
   position: fixed;
   top: 0;
   left: 0;
@@ -108,8 +111,9 @@ h2 {
     background-color: #f0f0f0;
     padding: 20px;
     border-radius: 5px;
-    width: 80%; /* Ensure footer has the same width as the nav */
+    margin-top: auto;
     position: fixed;
+    width: 81.5%; /* Ensure footer has the same width as the nav */
     bottom: 0;
 
   .footer-text-container {
