--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -11,7 +11,6 @@ body {
 }
 
 .sidebar {
-  
   padding-top: 1rem;
   padding: 20px;
   position: fixed;
@@ -24,6 +23,80 @@ body {
   transition: 0.5s;
   z-index: 999;
   background-color: #f0f0f0;
+}
+
+.sidebar ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.sidebar ul li {
+  margin-bottom: 10px;
+}
+
+/* Top navigation styles */
+.top-nav {
+  background-color: #f0f0f0;
+  padding: 10px 0;
+}
+
+.nav-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.site-title {
+  color: #000000;
+  margin: 0;
+  font-size: 1.5em;
+}
+
+.main-menu {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+
+.main-menu li {
+  position: relative;
+  margin-left: 20px;
+ 
+}
+
+.main-menu a {
+  color: #000000;
+  text-decoration: none;
+  padding: 10px;
+  display: block;
+  font-size: medium;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-menu a {
+  color: #333;
+  padding: 12px 16px;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.main-menu a:hover,
+.dropdown-menu a:hover {
+  background-color: #555;
+  color: white;
 }
 
 .main-content {
@@ -75,7 +148,6 @@ body {
   .main-content {
     width: 100%;
     margin-left: 0;
- 
   }
 }
 
@@ -108,18 +180,19 @@ h2 {
 }
 //Footer
 .footer {
-    background-color: #f0f0f0;
-    padding: 20px;
-    border-radius: 5px;
-    margin-top: auto;
-    position: fixed;
-    width: 81.5%; /* Ensure footer has the same width as the nav */
-    bottom: 0;
-
-  .footer-text-container {
-    
-  }
-
+  padding-top: 1rem;
+  border-radius: 5px;
+  padding: 20px;
+  margin-top: auto;
+  position: fixed;
+  bottom: 0;
+  width: 87%;
+  box-sizing: border-box;
+  text-align: center; /* Center text horizontally */
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center items horizontally */
+  justify-content: center;
 }
 
 // Page-specific styles
