--- a/app/views/partials/_sidebar.html.erb
+++ b/app/views/partials/_sidebar.html.erb
@@ -1,3 +1,19 @@
 <aside class="sidebar">
     <h1>MSD</h1>
+    <nav>
+        <ul>
+            <li><%= link_to "Dashboard", dashboard_path %></li>
+            <li><%= link_to "Keywords", keywords_path %></li>
+            <li><%= link_to "Searches", searches_path %></li>
+            <li><%= link_to "Alert Settings", alert_settings_path %></li>
+            <li><%= link_to "Settings", settings_path %></li>
+            <% if user_signed_in? %>
+                <li><%= link_to "Profile", users_profile_path %></li>
+                <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+            <% else %>
+                <li><%= link_to "Sign In", new_user_session_path %></li>
+                <li><%= link_to "Sign Up", new_user_registration_path %></li>
+            <% end %>
+        </ul>
+    </nav>
 </aside>
